Buildpack integrated with loan service and google-jib integrated with cards microservice

--- a/loans/build.gradle
+++ b/loans/build.gradle
@@ -37,3 +37,6 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+tasks.named('bootBuildImage'){
+	imageName = 'aditmathur/loans:v1'
+}
