--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
 group = 'com.ezbank'
@@ -36,4 +37,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+jib{
+	from {
+		image = 'openjdk:21-jdk-slim'
+	}
+	to {
+		image = 'aditmathur/accounts:v1'
+	}
 }
