--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -43,6 +43,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/accounts:v1'
+		image = 'aditmathur/ezbank-accounts:v1'
 	}
 }
