--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,38 @@
 services:
   accounts:
-    image: "aditmathur/ezbank-accounts"
+    image: "aditmathur/ezbank-accounts:v1"
+    container_name: "accounts-ms"
+    ports:
+      - "8080:8080"
+    deploy:
+      resources:
+        limits:
+          memory: "512m"
+    networks:
+      - "ezbank"
+
+  loans:
+    image: "aditmathur/ezbank-loans:v1"
+    container_name: "loans-ms"
+    ports:
+      - "8090:8090"
+    deploy:
+      resources:
+        limits:
+          memory: "512m"
+    networks:
+      - "ezbank"
+  cards:
+    image: "aditmathur/ezbank-cards:v1"
+    container_name: "cards-ms"
+    ports:
+      - "9000:9000"
+    deploy:
+      resources:
+        limits:
+          memory: "512m"
+    networks:
+      - "ezbank"
+networks:
+  ezbank:
+    driver: "bridge"
