--- a/cards/build.gradle
+++ b/cards/build.gradle
@@ -43,6 +43,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/ezbank-cards:v1'
+		image = 'aditmathur/ezbank-cards:v2-config-value-annotation'
 	}
 }
