--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   accounts:
-    image: "aditmathur/ezbank-accounts:v1"
+    image: "aditmathur/ezbank-accounts:v2-config-value-annotation"
     container_name: "accounts-ms"
     ports:
       - "8080:8080"
@@ -12,7 +12,7 @@ services:
       - "ezbank"
 
   loans:
-    image: "aditmathur/ezbank-loans:v1"
+    image: "aditmathur/ezbank-loans:v2-config-value-annotation"
     container_name: "loans-ms"
     ports:
       - "8090:8090"
@@ -23,7 +23,7 @@ services:
     networks:
       - "ezbank"
   cards:
-    image: "aditmathur/ezbank-cards:v1"
+    image: "aditmathur/ezbank-cards:v2-config-value-annotation"
     container_name: "cards-ms"
     ports:
       - "9000:9000"
