--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -17,3 +17,12 @@ spring:
 
 build:
   version: "1.0"
+
+cards:
+  message: "Welcome to EZBank account related local APIs"
+  contactDetails:
+    name: "Adit Mathur"
+    email: "aditmathur@ezbank.com"
+  onCallSupport:
+    -"(555)555-1234"
+    -"(555)555-1234"
