--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8090
+
 spring:
+  application:
+    name: "loans"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -17,12 +22,3 @@ spring:
 
 build:
   version: "1.0"
-
-loans:
-  message: "Welcome to EZBank account related local APIs"
-  contactDetails:
-    name: "Adit Mathur"
-    email: "aditmathur@ezbank.com"
-  onCallSupport:
-    -"(555)555-1234"
-    -"(555)555-1234"
