Actuator refresh config endpoint exposed

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -22,5 +22,8 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8071/"
 
-build:
-  version: "1.0"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
