--- a/loans/build.gradle
+++ b/loans/build.gradle
@@ -54,6 +54,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/ezbank-loans:v3-configserver-git'
+		image = 'aditmathur/ezbank-loans:v3-configserver-git-actuator-refresh'
 	}
 }
