--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -55,6 +55,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/ezbank-accounts:v3-configserver-git'
+		image = 'aditmathur/ezbank-accounts:v3-configserver-git-actuator-refresh'
 	}
 }
