--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -20,5 +20,8 @@ spring:
       ddl-auto: update
     show-sql: true
 
-build:
-  version: "1.0"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
