--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       timeout: 5s
       retries: 10
       start_period: 5s
+    networks:
+      - "ezbank"
 
   configserver:
     image: "aditmathur/ezbank-configserver:v2"
