--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -56,6 +56,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/ezbank-accounts:v3-configserver-git-actuator-refresh'
+		image = 'aditmathur/ezbank-accounts:v2'
 	}
 }
