--- a/cards/build.gradle
+++ b/cards/build.gradle
@@ -55,6 +55,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/ezbank-cards:v3-configserver-git-actuator-refresh'
+		image = 'aditmathur/ezbank-cards:v2'
 	}
 }
