--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       timeout: 5s
       retries: 10
       start_period: 5s
-    networks:
-      - "ezbank"
+    extends:
+      file: "common-config.yml"
+      service: "network-deploy-service"
 
   configserver:
     image: "aditmathur/ezbank-configserver:v2"
@@ -28,70 +29,45 @@ services:
       timeout: 5s
       retries: 10
       start_period: 10s
-    deploy:
-      resources:
-        limits:
-          memory: "512m"
-    networks:
-      - "ezbank"
+    extends:
+      file: "common-config.yml"
+      service: "microservice-base-config"
 
   accounts:
-    image: "aditmathur/ezbank-accounts:v3-configserver-git-actuator-refresh"
+    image: "aditmathur/ezbank-accounts:v2"
     container_name: "accounts-ms"
     ports:
       - "8080:8080"
-    depends_on:
-      configserver:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: "512m"
-    networks:
-      - "ezbank"
     environment:
       SPRING_APPLICATION_NAME: "accounts"
-      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
-      SPRING_PROFILE_ACTIVE: "default"
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
 
 
   loans:
-    image: "aditmathur/ezbank-loans:v3-configserver-git-actuator-refresh"
+    image: "aditmathur/ezbank-loans:v2"
     container_name: "loans-ms"
     ports:
       - "8090:8090"
-    depends_on:
-      configserver:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: "512m"
-    networks:
-      - "ezbank"
     environment:
       SPRING_APPLICATION_NAME: "loans"
-      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
-      SPRING_PROFILE_ACTIVE: "default"
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
 
   cards:
-    image: "aditmathur/ezbank-cards:v3-configserver-git-actuator-refresh"
+    image: "aditmathur/ezbank-cards:v2"
     container_name: "cards-ms"
     ports:
       - "9000:9000"
-    depends_on:
-      configserver:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: "512m"
-    networks:
-      - "ezbank"
     environment:
       SPRING_APPLICATION_NAME: "cards"
-      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
-      SPRING_PROFILE_ACTIVE: "default"
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
 
 networks:
   ezbank:
