MySQL DB integrated with microservices instead of h2 db and cloud bus dependency removed for local development ease

--- a/configserver/build.gradle
+++ b/configserver/build.gradle
@@ -23,8 +23,6 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
-	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp:4.1.0'
-	implementation 'org.springframework.cloud:spring-cloud-config-monitor:4.1.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -43,6 +41,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/ezbank-configserver:v2'
+		image = 'aditmathur/ezbank-configserver:v3-mysql'
 	}
 }
