--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -18,8 +18,33 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8071/"
 
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
+info:
+  app:
+    name: "accounts"
+    description: "EZBank Cards Application"
+    version: "1.0.0"
