--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       service: "microservice-db-config"
 
   configserver:
-    image: "aditmathur/ezbank-configserver:v3-mysql"
+    image: "aditmathur/ezbank-configserver:v4-eureka-feign"
     container_name: "configserver-ms"
     ports:
       - "8071:8071"
@@ -44,8 +44,25 @@ services:
       file: "common-config.yml"
       service: "microservice-base-config"
 
+  eurekaserver:
+    image: "aditmathur/ezbank-eurekaserver:v4-eureka-feign"
+    container_name: "eurekaserver-ms"
+    ports:
+      - "8070:8070"
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
+    healthcheck:
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: "common-config.yml"
+      service: "microservice-configserver-config"
+
   accounts:
-    image: "aditmathur/ezbank-accounts:v3-mysql"
+    image: "aditmathur/ezbank-accounts:v4-eureka-feign"
     container_name: "accounts-ms"
     ports:
       - "8080:8080"
@@ -57,10 +74,10 @@ services:
         condition: service_healthy
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eureka-config
 
   loans:
-    image: "aditmathur/ezbank-loans:v3-mysql"
+    image: "aditmathur/ezbank-loans:v4-eureka-feign"
     container_name: "loans-ms"
     ports:
       - "8090:8090"
@@ -72,11 +89,11 @@ services:
         condition: service_healthy
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eureka-config
 
 
   cards:
-    image: "aditmathur/ezbank-cards:v3-mysql"
+    image: "aditmathur/ezbank-cards:v4-eureka-feign"
     container_name: "cards-ms"
     ports:
       - "9000:9000"
@@ -88,7 +105,7 @@ services:
         condition: service_healthy
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eureka-config
 
 
 networks:
