--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -15,12 +15,36 @@ spring:
       mode: always
   jpa:
     show-sql: true
-
   config:
     import: "optional:configserver:http://localhost:8071/"
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
 
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
+info:
+  app:
+    name: "accounts"
+    description: "EZBank Loans Application"
+    version: "1.0.0"
