--- a/eurekaserver/build.gradle
+++ b/eurekaserver/build.gradle
@@ -43,6 +43,6 @@ jib{
 		image = 'openjdk:21-jdk-slim'
 	}
 	to {
-		image = 'aditmathur/ezbank-eurekaserver:v4-eureka-feign'
+		image = 'aditmathur/ezbank-eurekaserver:v5-gatewayserver'
 	}
 }
