--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -32,19 +32,29 @@ management:
     web:
       exposure:
         include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
   endpoint:
     shutdown:
       enabled: true
+    health:
+      probes:
+        enabled: true
   info:
     env:
       enabled: true
-
-endpoints:
-  shutdown:
-    enabled: true
 
 info:
   app:
     name: "accounts"
     description: "EZBank Accounts Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      ezbank:
+        accounts: DEBUG
