--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      timeout: 10s
+      retries: 10
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   accountsdb:
     container_name: "accountsdb"
     ports:
@@ -30,7 +42,7 @@ services:
       service: "microservice-db-config"
 
   configserver:
-    image: "aditmathur/ezbank-configserver:v5-gatewayserver"
+    image: "aditmathur/ezbank-configserver:v6-resilience"
     container_name: "configserver-ms"
     ports:
       - "8071:8071"
@@ -45,7 +57,7 @@ services:
       service: "microservice-base-config"
 
   eurekaserver:
-    image: "aditmathur/ezbank-eurekaserver:v5-gatewayserver"
+    image: "aditmathur/ezbank-eurekaserver:v6-resilience"
     container_name: "eurekaserver-ms"
     ports:
       - "8070:8070"
@@ -62,7 +74,7 @@ services:
       service: "microservice-configserver-config"
 
   accounts:
-    image: "aditmathur/ezbank-accounts:v5-gatewayserver"
+    image: "aditmathur/ezbank-accounts:v6-resilience"
     container_name: "accounts-ms"
     ports:
       - "8080:8080"
@@ -83,7 +95,7 @@ services:
       service: microservice-eureka-config
 
   loans:
-    image: "aditmathur/ezbank-loans:v5-gatewayserver"
+    image: "aditmathur/ezbank-loans:v6-resilience"
     container_name: "loans-ms"
     ports:
       - "8090:8090"
@@ -105,7 +117,7 @@ services:
 
 
   cards:
-    image: "aditmathur/ezbank-cards:v5-gatewayserver"
+    image: "aditmathur/ezbank-cards:v6-resilience"
     container_name: "cards-ms"
     ports:
       - "9000:9000"
@@ -126,7 +138,7 @@ services:
       service: microservice-eureka-config
 
   gatewayserver:
-    image: "aditmathur/ezbank-gatewayserver:v5-gatewayserver"
+    image: "aditmathur/ezbank-gatewayserver:v6-resilience"
     container_name: "gatewayserver-ms"
     ports:
       - "8072:8072"
@@ -137,8 +149,14 @@ services:
         condition: service_healthy
       cards:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
+      SPRING_DATA_REDIS_CONNECT-TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
     extends:
       file: common-config.yml
       service: microservice-eureka-config
