--- a/configserver/build.gradle
+++ b/configserver/build.gradle
@@ -23,6 +23,8 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
+	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.3'
+	implementation 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.1.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -38,9 +40,9 @@ tasks.named('test') {
 
 jib{
 	from {
-		image = 'openjdk:21-jdk-slim'
+		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-configserver:v6-resilience'
+		image = 'aditmathur/ezbank-configserver:v7-observability-monitoring'
 	}
 }
