--- a/eurekaserver/build.gradle
+++ b/eurekaserver/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.3'
+	implementation 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.1.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -40,9 +42,9 @@ tasks.named('test') {
 
 jib{
 	from {
-		image = 'openjdk:21-jdk-slim'
+		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-eurekaserver:v6-resilience'
+		image = 'aditmathur/ezbank-eurekaserver:v7-observability-monitoring'
 	}
 }
