--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-circuitbreaker-resilience4j'
 	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.3'
+	implementation 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.1.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -55,9 +57,9 @@ tasks.named('test') {
 
 jib{
 	from {
-		image = 'openjdk:21-jdk-slim'
+		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-accounts:v6-resilience'
+		image = 'aditmathur/ezbank-accounts:v7-observability-monitoring'
 	}
 }
