--- a/docker-compose/prod/common-config.yml
+++ b/docker-compose/prod/common-config.yml
@@ -19,10 +19,15 @@ services:
   microservice-base-config:
     extends:
       service: "network-deploy-service"
-      deploy:
-        resources:
-          limits:
-            memory: "512m"
+    deploy:
+      resources:
+        limits:
+          memory: "512m"
+    environment:
+      JAVA_TOOL_OPTIONS: "-javaagent:/app/libs/opentelemetry-javaagent-1.32.0.jar"
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://tempo:4317
+      OTEL_METRICS_EXPORTER: none
+
 
   microservice-configserver-config:
     extends:
