--- a/loans/build.gradle
+++ b/loans/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.3'
+	implementation 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.1.0'
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -52,9 +54,9 @@ dependencyManagement {
 }
 jib{
 	from {
-		image = 'openjdk:21-jdk-slim'
+		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-loans:v6-resilience'
+		image = 'aditmathur/ezbank-loans:v7-observability-monitoring'
 	}
 }
