--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -46,6 +46,9 @@ management:
   info:
     env:
       enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 info:
   app:
@@ -58,3 +61,5 @@ logging:
     com:
       ezbank:
         loans: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
