--- a/gatewayserver/build.gradle
+++ b/gatewayserver/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive:3.2.3'
 	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.3'
 	implementation 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.2.3'
+	implementation 'org.springframework.security:spring-security-oauth2-resource-server:6.2.2'
+	implementation 'org.springframework.security:spring-security-oauth2-jose:6.2.2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -48,6 +51,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-gatewayserver:v7-observability-monitoring'
+		image = 'aditmathur/ezbank-gatewayserver:v8-security'
 	}
 }
