--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -60,6 +60,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-accounts:v7-observability-monitoring'
+		image = 'aditmathur/ezbank-accounts:v8-security'
 	}
 }
