--- a/cards/build.gradle
+++ b/cards/build.gradle
@@ -57,6 +57,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-cards:v7-observability-monitoring'
+		image = 'aditmathur/ezbank-cards:v8-security'
 	}
 }
