--- a/loans/build.gradle
+++ b/loans/build.gradle
@@ -57,6 +57,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-loans:v7-observability-monitoring'
+		image = 'aditmathur/ezbank-loans:v8-security'
 	}
 }
