--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.3'
 	implementation 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.1.0'
+    implementation 'org.springframework.cloud:spring-cloud-stream:4.1.0'
+    implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit:4.1.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -60,6 +62,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-accounts:v8-security'
+		image = 'aditmathur/ezbank-accounts:v9-event-driven-rabbitmq'
 	}
 }
