--- a/message/build.gradle
+++ b/message/build.gradle
@@ -3,7 +3,6 @@ plugins {
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'com.google.cloud.tools.jib' version '3.4.0'
-
 }
 
 group = 'com.ezbank'
@@ -22,11 +21,11 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.cloud:spring-cloud-starter-config'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.3'
-	implementation 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.cloud:spring-cloud-stream:4.1.0'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit:4.1.0'
+//	implementation 'org.springframework.cloud:spring-cloud-function-context'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-function-web:4.1.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -45,6 +44,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-eurekaserver:v9-event-driven-rabbitmq'
+		image = 'aditmathur/ezbank-message:v9-event-driven-rabbitmq'
 	}
 }
