--- a/eurekaserver/build.gradle
+++ b/eurekaserver/build.gradle
@@ -45,6 +45,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-eurekaserver:v9-event-driven-rabbitmq'
+		image = 'aditmathur/ezbank-eurekaserver:v10-event-driven-kafka'
 	}
 }
