--- a/cards/build.gradle
+++ b/cards/build.gradle
@@ -57,6 +57,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-cards:v9-event-driven-rabbitmq'
+		image = 'aditmathur/ezbank-cards:v10-event-driven-kafka'
 	}
 }
