--- a/configserver/build.gradle
+++ b/configserver/build.gradle
@@ -43,6 +43,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-configserver:v9-event-driven-rabbitmq'
+		image = 'aditmathur/ezbank-configserver:v10-event-driven-kafka'
 	}
 }
