--- a/gatewayserver/build.gradle
+++ b/gatewayserver/build.gradle
@@ -51,6 +51,6 @@ jib{
 		image = 'amazoncorretto:21-alpine3.19'
 	}
 	to {
-		image = 'aditmathur/ezbank-gatewayserver:v9-event-driven-rabbitmq'
+		image = 'aditmathur/ezbank-gatewayserver:v10-event-driven-kafka'
 	}
 }
