--- a/message/src/main/resources/application.yml
+++ b/message/src/main/resources/application.yml
@@ -14,9 +14,7 @@ spring:
           group: ${spring.application.name}
         generateEmailgenerateSMS-out-0:
           destination: communication-sent
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    connectionTimeout: 10s
+      kafka:
+        binder:
+          brokers:
+            - localhost:9092
