--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -391,6 +391,10 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
+volumes:
+  kafka_data:
+    driver: local
+
 networks:
   ezbank:
     driver: "bridge"
